--- a/.github/workflows/create-diagram.yml
+++ b/.github/workflows/create-diagram.yml
@@ -1,25 +1,21 @@
 name: Create Diagram
-
 on:
+  workflow_dispatch: {}
   push:
-    branches: [ main ]
-
+    branches:
+      - main
 jobs:
-  build:
+  get_data:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - uses: githubocto/repo-visualizer@v0.5.0
-      with:
-        output-file: diagram.svg
-    - name: Commit diagram
-      run: |
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
-        git add diagram.svg
-        git commit -m "Update diagram.svg"
-    - name: Push changes
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: main
+      - name: Checkout code
+        uses: actions/checkout@master
+      - name: Update diagram
+        uses: githubocto/repo-visualizer@main
+        with:
+          excluded_paths: "ignore,.github"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main     
